UPDATE: Fixed issue with background colour not changing when using the hover function in dark mode

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,6 +6,7 @@
     --rules-button-color:  lightblue;
     --rules-modal-button-color: green;
     --card-background-color: linear-gradient(90deg, rgba(85, 213, 255, 0.8) 20%, rgba(255, 94, 6, 0.8) 100%);
+    --card-js-hover: red;
   }
   
   body {
@@ -21,6 +22,7 @@
     --rules-button-color: green;
     --rules-modal-button-color: lightblue;
     --card-background-color: linear-gradient(90deg, rgba(92, 255, 85, 0.8) 20%, rgba(246, 3, 221, 0.8) 100%);
+    --card-js-hover: red;
   }
 
   /*--------------------------------------------Fonts */
